--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
-nltk==3.6.2
-spacy==3.1.0
-numpy==1.21.2
-tensorflow==2.5.0
-keras==2.4.3
-en_core_web_sm==3.1.0 # Load the English language model
+nltk
+spacy
+numpy
+tensorflow
+keras
+en_core_web_sm # Load the English language model
